// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetails component should render by default 1`] = `
Array [
  <h1
    className="title"
  >
    A New Hope
    <span
      className="starIcon"
      onClick={[Function]}
    >
      <svg
        className=""
        fill="grey"
        height="25"
        width="23"
      >
        <polygon
          points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
          style={
            Object {
              "fillRule": "nonzero",
            }
          }
        />
      </svg>
    </span>
  </h1>,
  <p>
    It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
  </p>,
]
`;

exports[`MovieDetails component should render favorite movie 1`] = `
Array [
  <h1
    className="title"
  >
    A New Hope
    <span
      className="starIcon"
      onClick={[Function]}
    >
      <svg
        className=""
        fill="yellow"
        height="25"
        width="23"
      >
        <polygon
          points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
          style={
            Object {
              "fillRule": "nonzero",
            }
          }
        />
      </svg>
    </span>
  </h1>,
  <p>
    It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
  </p>,
]
`;
